Finished up the homepage

--- a/_sass/1-modules/footer.sass
+++ b/_sass/1-modules/footer.sass
@@ -1,11 +1,13 @@
 footer
-  width: 336px
+  width: 250px
   display: flex
   flex-direction: row
   justify-content: space-between
   align-items: flex-start
-  a
+  a, p
     font-size: 0.8125rem
+    margin: 0
+    line-height: 1.25rem
 
 @media screen and(max-width: 800px)
   footer
