--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -9,4 +9,29 @@
     <li><a href="https://designforum.us/" target="_bank">Education</a></li>
     <li><a href="mailto:{{ site.email }}">Contact</a></li>
   </ul>
+  <div class="navToggle">
+    <svg class="navMenu" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+      <defs>
+        <style>
+          .cls-1 {
+            fill: none;
+          }
+        </style>
+      </defs>
+      <path id="Path_3" data-name="Path 3" class="cls-1" d="M0,0H24V24H0Z"/>
+      <path id="Path_4" data-name="Path 4" d="M3,18H21V16H3Zm0-5H21V11H3ZM3,6V8H21V6Z"/>
+    </svg>
+    <svg class="navClose" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+      <defs>
+        <style>
+          .cls-1 {
+            fill: none;
+          }
+        </style>
+      </defs>
+      <path id="Path_5" data-name="Path 5" d="M19,6.41,17.59,5,12,10.59,6.41,5,5,6.41,10.59,12,5,17.59,6.41,19,12,13.41,17.59,19,19,17.59,13.41,12Z"/>
+      <path id="Path_6" data-name="Path 6" class="cls-1" d="M0,0H24V24H0Z"/>
+    </svg>
+
+  </div>
 </nav>
