--- a/_sass/1-modules/nav.sass
+++ b/_sass/1-modules/nav.sass
@@ -1,5 +1,5 @@
 nav
-  position: absolute
+  position: fixed
   top: 0
   left: 0
   right: 0
@@ -67,7 +67,7 @@ nav
 @media screen and(max-width: 550px)
   nav
     padding: 2rem 1rem 8px 1rem
-    height: 60px
+    height: auto
     overflow: hidden
     align-items: flex-start
     .navToggle
