--- a/_sass/2-layouts/projects.sass
+++ b/_sass/2-layouts/projects.sass
@@ -16,11 +16,18 @@
     text-decoration: none
     padding: 1rem
     box-sizing: border-box
+    position: relative
+    z-index: 1
     h3, small
+      position: relative
+      z-index: 3
       margin: 0
       padding: .5rem 0 0 0
-
-
+    &.lightText
+      h3, small
+        color: white
+    &:link
+      background: white
 @media screen and(max-width: 1000px)
   .projectsWrapper
     margin: 114px 1rem 1rem 1rem
