--- a/_sass/0-base/style.sass
+++ b/_sass/0-base/style.sass
@@ -4,6 +4,10 @@ $black: #000000
 $white: #FFFFFF
 $blue: #0000FF
 
+$fontLarge: 1.5rem
+$fontMedium: 1.125rem
+$fontSmall: 0.8125rem
+
 body
   font-family: $font-stack
   font-size: 100%
