--- a/_sass/1-modules/footer.sass
+++ b/_sass/1-modules/footer.sass
@@ -5,7 +5,7 @@ footer
   justify-content: space-between
   align-items: flex-start
   a, p
-    font-size: 0.8125rem
+    font-size: $fontSmall
     margin: 0
     line-height: 1.25rem
 
