--- a/_sass/2-layouts/index.sass
+++ b/_sass/2-layouts/index.sass
@@ -34,7 +34,7 @@
   li
     margin-top: 16px
     a
-      font-size: 1.125rem
+      font-size: $fontMedium
       font-weight: normal
       color: $black
       text-decoration: none
