--- a/_sass/2-layouts/project.sass
+++ b/_sass/2-layouts/project.sass
@@ -28,6 +28,9 @@
       ul
         list-style: none
         padding: 0
+        li
+          font-size: $fontSmall
+          line-height: 1.25rem
       a
         display: block
         margin: 1.5rem 0
