--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -14,7 +14,7 @@ layout: default
       <img src="{{ site.baseurl }}/assets/img/{{ page.primaryImage }}" width="100%" height="auto"/>
       <div class="imageGrid">
         {% for item in page.images %}
-        <img src="{{ site.baseurl }}/assets/img/{{ item }}" width="50%" height="auto"/>
+        <img src="{{ site.baseurl }}/assets/img/{{ item }}" />
         {% endfor %}
       </div>
     </div>
