--- a/_sass/2-layouts/project.sass
+++ b/_sass/2-layouts/project.sass
@@ -58,7 +58,7 @@
           object-fit: cover
 @media screen and(max-width: 1000px)
   .projectContentWrapper
-    padding: 98px 1rem 1rem 1rem
+    padding: 98px 1rem 50px 1rem
 @media screen and(max-width: 700px)
   .projectContentWrapper
     .projectContentContainer
