--- a/_sass/2-layouts/information.sass
+++ b/_sass/2-layouts/information.sass
@@ -2,7 +2,7 @@
   padding: 98px 100px 100px 100px
   box-sizing: border-box
   width: 100%
-  height: 100vh
+  min-height: 100vh
   display: grid
   grid-template-columns: 1fr 1fr
   grid-template-rows: 1fr
@@ -43,7 +43,7 @@
         opacity: 0.75
   .imageContent
     height: 50vw
-    max-height: 600px
+    max-height: 500px
     min-height: 300px
     display: flex
     flex-direction: row
@@ -52,11 +52,15 @@
     overflow: hidden
     flex-wrap: wrap
     grid-area: images
+    margin: auto
     img
       object-fit: cover
 @media screen and(max-width: 1000px)
   .informationContentContainer
-    padding: 98px 1rem 1rem 1rem
+    padding: 98px 1rem 50px 1rem
 @media screen and(max-width: 700px)
   .informationContentContainer
     grid-template: "images" "main"
+    .imageContent, .mainContent
+      max-width: 500px
+      margin: auto
