Updated max widths

--- a/_sass/1-modules/nav.sass
+++ b/_sass/1-modules/nav.sass
@@ -12,6 +12,8 @@ nav
   background: $white
   z-index: 100
   box-sizing: border-box
+  max-width: 1500px
+  margin: auto
   .navToggle
     display: none
   &::before
