--- a/_sass/2-layouts/information.sass
+++ b/_sass/2-layouts/information.sass
@@ -9,6 +9,8 @@
   grid-gap: 2rem
   align-items: center
   grid-template: "main images"
+  max-width: 1500px
+  margin: auto
   .mainContent
     grid-area: main
     h1
