--- a/_sass/2-layouts/projects.sass
+++ b/_sass/2-layouts/projects.sass
@@ -5,6 +5,9 @@
   border-top: 1px solid black
   border-left: 1px solid black
   box-sizing: border-box
+  @media screen and (min-width: 1500px)
+    max-width: 1300px
+    margin: 114px auto 100px auto
   a
     border-right: 1px solid black
     border-bottom: 1px solid black
