--- a/_sass/2-layouts/colophon.sass
+++ b/_sass/2-layouts/colophon.sass
@@ -4,6 +4,8 @@
   min-height: 100vh
   padding: 178px 100px 100px 100px
   box-sizing: border-box
+  max-width: 1500px
+  margin: auto
   ul
     padding: 0
     margin: 0
