--- a/_sass/2-layouts/project.sass
+++ b/_sass/2-layouts/project.sass
@@ -3,6 +3,8 @@
   height: auto
   padding: 98px 100px 100px 100px
   box-sizing: border-box
+  max-width: 1500px
+  margin: auto
   .projectContentContainer
     margin: 32px 0 0 0
     width: 100%
