--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,3 +3,10 @@
 <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/css/styles.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.0, viewport-fit=cover"/>
 <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
+<link href="{{ site.baseurl }}/favicon.png" rel="shortcut icon" type="image/x-icon" />
+<link href="{{ site.baseurl }}/apple-touch-icon.png" rel="apple-touch-icon" />
+<meta property="og:title" content="{{ site.title }}" />
+<meta property="og:image" content="{{ site.baseurl }}/og-image.png" />
+<meta property="og:description" content="{{ site.description }}" />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="/" />
