--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -8,7 +8,7 @@ layout: default
       <h1>{{ page.title }}</h1>
       <small>{{ page.projectDate }}</small>
       {{ content }}
-      <a href="mailto:{{ site.email }}">contact</a>
+      <a href="mailto:{{ site.email }}">Contact</a>
     </div>
     <div class="projectImages">
       <img src="{{ site.baseurl }}/assets/img/{{ page.primaryImage }}" width="100%" height="auto"/>
