info page alignment

--- a/_sass/2-layouts/information.sass
+++ b/_sass/2-layouts/information.sass
@@ -13,6 +13,7 @@
   margin: auto
   .mainContent
     grid-area: main
+    max-width: 600px
     h1
       font-size: $fontLarge
       font-weight: bold
@@ -46,6 +47,7 @@
   .imageContent
     height: 50vw
     max-height: 500px
+    max-width: 600px
     display: flex
     flex-direction: row
     justify-content: center
