--- a/_sass/2-layouts/project.sass
+++ b/_sass/2-layouts/project.sass
@@ -64,3 +64,6 @@
   .projectContentWrapper
     .projectContentContainer
       grid-template-columns: 1fr
+@media screen and(max-width: 550px)
+  .projectContentWrapper
+    padding: 76px 1rem 50px 1rem
