--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -7,7 +7,12 @@ layout: default
     <div class="mainProjectContent">
       <h1>{{ page.title }}</h1>
       <small>{{ page.projectDate }}</small>
-      {{ content }}
+      <p>{{ page.body }}</p>
+      <ul>
+        {% for item in page.projectDetails %}
+        <li>{{ item }}</li>
+        {% endfor %}
+      </ul>
     </div>
     <div class="projectImages">
       <img src="{{ site.baseurl }}{{ page.primaryImage }}" width="100%" height="auto"/>
