Prepping for test

--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -13,6 +13,7 @@ layout: default
         <li>{{ item }}</li>
         {% endfor %}
       </ul>
+      {{ content }}
     </div>
     <div class="projectImages">
       <img src="{{ site.baseurl }}{{ page.primaryImage }}" width="100%" height="auto"/>
