--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
   <head>
     {% include head.html %}
   </head>
-  <body>
+  <body data-theme="trans">
     {% if page.url != '/' %}
     {% include nav.html %}
     {% endif %}
