--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -15,10 +15,10 @@ layout: default
       </ul>
     </div>
     <div class="projectImages">
-      <img src="{{ site.baseurl }}{{ page.primaryImage }}" width="100%" height="auto"/>
+      <img src="{{ site.baseurl }}{{ page.primaryImage }}" class="lb-js" data-path="auto" width="100%" height="auto"/>
       <div class="imageGrid">
         {% for item in page.images %}
-        <img src="{{ site.baseurl }}{{ item }}" />
+        <img src="{{ site.baseurl }}{{ item }}" class="lb-js" data-path="auto" />
         {% endfor %}
       </div>
     </div>
