--- a/_includes/js.html
+++ b/_includes/js.html
@@ -1,2 +1,3 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="{{ site.baseurl }}/assets/js/functions.js" type="text/javascript"></script>
+<script src="{{ site.baseurl }}/assets/js/lightbox-1.0.0.min.js" type="text/javascript"></script>
