--- a/_includes/paginator.html
+++ b/_includes/paginator.html
@@ -1,6 +1,6 @@
 <div class="paginator">
-{% if page.previous.url %}
-  <a href="{{ site.url }}{{ site.baseurl }}{{ page.previous.url }}" class="paginatorBack">
+{% if page.next.url %}
+  <a href="{{ site.url }}{{ site.baseurl }}{{ page.next.url }}" class="paginatorBack">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
       <defs>
         <style>
@@ -17,8 +17,8 @@
   </a>
 {% endif %}
   <span></span>
-{% if page.next.url %}
-  <a href="{{ site.url }}{{ site.baseurl }}{{ page.next.url }}" class="paginatorNext">
+{% if page.previous.url %}
+  <a href="{{ site.url }}{{ site.baseurl }}{{ page.previous.url }}" class="paginatorNext">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
       <defs>
         <style>
