--- a/_sass/2-layouts/project.sass
+++ b/_sass/2-layouts/project.sass
@@ -49,13 +49,14 @@
       justify-content: center
       .imageGrid
         display: grid
-        grid-template-columns: 1fr 1fr
+        grid-template-columns: 1fr
         grid-gap: 0
         align-items: stretch
+        width: 100%
         img
           width: 100%
           object-fit: cover
-        img:nth-child(odd):last-of-type
+        //img:nth-child(odd):last-of-type
           grid-column: span 2
 @media screen and(max-width: 1000px)
   .projectContentWrapper
