--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,6 @@
 <meta charset="utf-8">
 <title>{{ site.title }}</title>
+<meta description="{{ site.desciptinon }}"/>
 <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/css/styles.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.0, viewport-fit=cover"/>
 <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
