--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,5 @@
 <meta charset="utf-8">
-<title>{{ site.title }}</title>
+<title>{{ site.title }} - Visual Communicator</title>
 <meta name="description" content="{{ site.description | truncate: 160 }}"/>
 <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/css/styles.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.0, viewport-fit=cover"/>
