--- a/_sass/1-modules/nav.sass
+++ b/_sass/1-modules/nav.sass
@@ -38,6 +38,8 @@ nav
       margin: 0
     .navTitle
       margin-right: 1rem
+    .navTagline
+      font-weight: 300
   ul
     padding: 0
     margin: 0
