--- a/_sass/2-layouts/index.sass
+++ b/_sass/2-layouts/index.sass
@@ -23,6 +23,8 @@
   align-self: end
 .indexTagline
   grid-row-start: 3
+  font-weight: 300
+  margin: 1rem auto
 .indexNavigation, footer
   grid-column-start: 10
 .indexNavigation
