--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,7 @@
 <meta charset="utf-8">
 <title>{{ site.title }} - Visual Communicator</title>
 <meta name="description" content="{{ site.description | truncate: 160 }}"/>
+<meta name="keywords" content="Visual Communicator, Designer, Graphic Designer, Print Design, David Gurr, David Gurr Design, David Gurr Visual Communicator"/>
 <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/css/styles.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.0, viewport-fit=cover"/>
 <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
