--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,7 @@
 <link href="{{ site.baseurl }}/favicon.png" rel="shortcut icon" type="image/x-icon" />
 <link href="{{ site.baseurl }}/apple-touch-icon.png" rel="apple-touch-icon" />
 <meta property="og:title" content="{{ site.title }}" />
-<meta property="og:image" content="{{ site.baseurl }}/og-image.png" />
+<meta property="og:image" content="{{ site.url }}{{ site.baseurl }}/og-image.png" />
 <meta property="og:description" content="{{ site.description }}" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="/" />
+<meta property="og:url" content="{{ site.url }}" />
