--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,6 +8,7 @@
 <link href="{{ site.baseurl }}/favicon.png" rel="shortcut icon" type="image/x-icon" />
 <link href="{{ site.baseurl }}/apple-touch-icon.png" rel="apple-touch-icon" />
 <meta property="og:title" content="{{ site.title }}" />
+<meta property="og:site_name" content="{{ site.title }} - Visual Communicator" />
 <meta property="og:image" content="{{ site.url }}{{ site.baseurl }}/og-image.png" />
 <meta property="og:description" content="{{ site.description }}" />
 <meta property="og:type" content="website" />
