--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,3 +13,8 @@
 <meta property="og:description" content="{{ site.description }}" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="{{ site.url }}" />
+<meta name="twitter:card" content="summary"/>
+<meta name="twitter:image" content="{{ site.url }}{{ site.baseurl }}/og-image.png"/>
+<meta name="twitter:title" content="{{ site.title }}" />
+<meta name="twitter:description" content="{{ site.description }}"/>
+<meta name="twitter:site" content="@DavidGurr"/>
