--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,6 +7,7 @@
 <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
 <link href="{{ site.baseurl }}/favicon.png" rel="shortcut icon" type="image/x-icon" />
 <link href="{{ site.baseurl }}/apple-touch-icon.png" rel="apple-touch-icon" />
+<link rel="canonical" href="{{ site.url }}{{ site.baseurl }}{{ page.url }}" />
 <meta property="og:title" content="{{ site.title }}" />
 <meta property="og:site_name" content="{{ site.title }} - Visual Communicator" />
 <meta property="og:image" content="{{ site.url }}{{ site.baseurl }}/og-image.png" />
