Updated SEO description and mailto targets

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -6,7 +6,7 @@
   <ul>
     <li><a href="{{ site.baseurl }}/projects">Projects</a></li>
     <li><a href="{{ site.baseurl }}/information">Information</a></li>
-    <li><a href="mailto:{{ site.email }}">Contact</a></li>
+    <li><a href="mailto:{{ site.email }}" target="_blank">Contact</a></li>
   </ul>
   <div class="navToggle">
     <svg class="navMenu" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
