--- a/_sass/1-modules/footer.sass
+++ b/_sass/1-modules/footer.sass
@@ -11,7 +11,7 @@ footer
 
 @media screen and(max-width: 800px)
   footer
-    width: auto
+    width: 250px
     display: flex
     flex-direction: column
     justify-content: space-between
