Updated css and type

--- a/_sass/2-layouts/splash-screen.sass
+++ b/_sass/2-layouts/splash-screen.sass
@@ -5,7 +5,7 @@
   box-sizing: border-box
   display: flex
   align-content: start
-  justify-content: start
+  justify-content: center
   align-items: start
   justify-items: start
   background: $white
@@ -19,6 +19,7 @@
     width: 100%
     max-width: 1500px
     color: inherit
+    letter-spacing: -0.02em
     a
       text-decoration: none
       color: inherit
@@ -37,6 +38,7 @@
 @media screen and (max-width: 800px)
   .splash-screen-wrapper
     padding: 32px
+    justify-content: start
     .splash-screen-body
       font-size: 32px
 
