Hid the old site

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,5 @@
 <meta charset="utf-8">
-<title>{{ site.title }} - Visual Communicator</title>
+<title>{{ site.title }} - Visual Communication</title>
 <meta name="description" content="{{ site.description | truncate: 160 }}"/>
 <meta name="keywords" content="Visual Communicator, Designer, Graphic Designer, Print Design, David Gurr, David Gurr Design, David Gurr Visual Communicator"/>
 <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/css/styles.css">
