--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
     {% include head.html %}
   </head>
   <body data-theme="trans">
-    {% if page.url != '/' %}
+    {% if page.url != '/home/' %}
     {% include nav.html %}
     {% endif %}
     {{ content }}
